fix: fix z-index of ai assistance ui

--- a/automad/src/client/admin/styles/components/editor/plugins/ai-assistance.less
+++ b/automad/src/client/admin/styles/components/editor/plugins/ai-assistance.less
@@ -36,7 +36,7 @@
 	@toggleSize: 3.35rem;
 	@iconFontSize: 1.25rem;
 	position: sticky;
-	z-index: 100;
+	z-index: 2;
 	display: flex;
 	align-items: end;
 	bottom: 0;
